--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
+    "@userback/react": "^0.3.4",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.12",
     "mini-svg-data-uri": "^1.4.4",
